<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2020 Red Hat, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>org.goots.hiderdoclet.doclet.integrationtest</groupId>
   <artifactId>test-javadoc</artifactId>
   <version>@project.version@</version>

   <name>Test override plugin version using command line property</name>

   <properties>
      <maven.compiler.source>11</maven.compiler.source>
      <maven.compiler.target>11</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>

   <dependencies>
      <dependency>
         <groupId>org.goots.hiderdoclet</groupId>
         <artifactId>doclet</artifactId>
         <version>@project.version@</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <showDeprecation>true</showDeprecation>
               <showWarnings>true</showWarnings>
               <source>${maven.compiler.argument.source}</source>
               <target>${maven.compiler.argument.target}</target>
               <compilerArgs>
                  <arg>-Xlint:unchecked</arg>
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <goals>
                     <goal>jar</goal>
                  </goals>
                  <configuration>
                     <source>11</source>
                     <doclet>org.goots.hiderdoclet.doclet.JavadocFilter</doclet>
                     <docletArtifact>
                        <groupId>org.goots.hiderdoclet</groupId>
                        <artifactId>doclet</artifactId>
                        <version>${project.version}</version>
                     </docletArtifact>
                     <additionalJOptions>
                        <additionalJOption>--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=hiderdoclet
                        </additionalJOption>
                        <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.model=hiderdoclet
                        </additionalJOption>

                        <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        </additionalJOption>
                        <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        </additionalJOption>
                     </additionalJOptions>
                     <detectJavaApiLink>true</detectJavaApiLink>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
</project>
